# coderev

./: .coderev.json.example  LICENSE  pyproject.toml  user_manual.en.md  user_manual.hu.md
coderev/: __init__.py
